--- a/src/app/components/opportunities/opportunities.component.html
+++ b/src/app/components/opportunities/opportunities.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container" id="main-container">
+  <button mat-raised-button color="primary"  (click)="openDialog(null,'add')">Add Opportunity</button>
     <table mat-table
     [dataSource]="dataSource" multiTemplateDataRows
     class="mat-elevation-z8">
@@ -35,4 +36,33 @@
 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
 
+</div>
+
+<div class="modal fade" id="addOpportunityModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="opportunityForm" (ngSubmit)="onSubmit()">
+          <label>ED</label>
+          <input type="text" formControlName="ed">
+          <label>Skills</label>
+          <input type="text" formControlName="skills">
+          <label>Location</label>
+          <input type="text" formControlName="location">
+          <label>Date</label>
+          <input type="text" formControlName="date">
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="onSubmit()" data-dismiss="modal">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
