--- a/src/app/components/opportunities/opportunities.component.html
+++ b/src/app/components/opportunities/opportunities.component.html
@@ -5,10 +5,8 @@
     class="mat-elevation-z8">
 <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
  <th mat-header-cell *matHeaderCellDef> {{column}} </th>
- <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+ <td mat-cell *matCellDef="let element"> {{element[column]}}  </td>
 </ng-container>
-
-<!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
 <ng-container matColumnDef="expandedDetail">
  <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
    <div class="example-element-detail"
@@ -17,7 +15,7 @@
        <div class="example-element-position"> {{element.id}} </div>
        <div class="example-element-symbol"> {{element.skill}} </div>
        <div class="example-element-name"> {{element.date}} </div>
-       <div class="example-element-weight"> {{element.location}} </div>
+       <div class="example-element-weight"> {{element.location}}  </div>
      </div>
      <div class="example-element-description">
        {{element.ed}}
@@ -35,6 +33,11 @@
 </tr>
 <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
+ <!-- <td *ngIf="column == 'location'">Hello</td> -->
+
+
+ <!-- <mat-form-f -->
+
 
 </div>
 
