--- a/src/app/components/opportunities/opportunities.component.html
+++ b/src/app/components/opportunities/opportunities.component.html
@@ -1,42 +1,68 @@
 <div class="container" id="main-container">
   <button mat-raised-button color="primary"  (click)="openDialog(null,'add')">Add Opportunity</button>
-    <table mat-table
-    [dataSource]="dataSource" multiTemplateDataRows
-    class="mat-elevation-z8">
-<ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
- <th mat-header-cell *matHeaderCellDef> {{column}} </th>
- <td mat-cell *matCellDef="let element"> {{element[column]}}  </td>
-</ng-container>
-<ng-container matColumnDef="expandedDetail">
- <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-   <div class="example-element-detail"
-        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-     <div class="example-element-diagram">
-       <div class="example-element-position"> {{element.id}} </div>
-       <div class="example-element-symbol"> {{element.skill}} </div>
-       <div class="example-element-name"> {{element.date}} </div>
-       <div class="example-element-weight"> {{element.location}}  </div>
-     </div>
-     <div class="example-element-description">
-       {{element.ed}}
-       <span class="example-element-description-attribution"> -- Wikipedia </span>
-     </div>
-   </div>
- </td>
-</ng-container>
 
-<tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-<tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
-   class="example-element-row"
-   [class.example-expanded-row]="expandedElement === element"
-   (click)="expandedElement = expandedElement === element ? null : element">
-</tr>
-<tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-</table>
- <!-- <td *ngIf="column == 'location'">Hello</td> -->
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+  </mat-form-field>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="skills">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.skills}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="location">
+      <th mat-header-cell *matHeaderCellDef> Weight </th>
+      <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="ed">
+      <th mat-header-cell *matHeaderCellDef> Symbol </th>
+      <td mat-cell *matCellDef="let element"> {{element.ed}} </td>
+    </ng-container>
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef> Symbol </th>
+      <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+  
+    <!-- Row shown when there is no matching data. -->
+    <!-- <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr> -->
+  </table>
 
 
- <!-- <mat-form-f -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </div>
