trends page ui improved

--- a/src/app/components/opportunities/opportunities.component.css
+++ b/src/app/components/opportunities/opportunities.component.css
@@ -51,3 +51,11 @@ table {
   mat-form-field { 
     z-index: 1200; 
 }
+/* mat-form-field{
+  width: 100%;
+} */
+
+/* .addButton{
+  position: absolute;
+
+} */
