audit history added

--- a/src/app/components/opportunities/opportunities.component.css
+++ b/src/app/components/opportunities/opportunities.component.css
@@ -59,3 +59,14 @@ table {
   position: absolute;
 
 } */
+.icons{
+  color:darkgrey;
+}
+.icons:hover{
+  cursor: pointer;
+  color:turquoise;
+}
+
+.filter{
+  margin-left: 100px;
+}
