--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,12 +8,15 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/opportunities" *ngIf="loggedIn()">Opportunities</a>
       </li>
+      <li class="nav-item ">
+        <a class="nav-link" routerLink="/search-opportunities" *ngIf="loggedIn()">Search</a>
+      </li>
       
       <li class="nav-item">
         <a class="nav-link" routerLink="/trends" >Trends</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/logs">Logs</a>
+        <a class="nav-link" routerLink="/audits">Audits</a>
       </li>
       <li class="nav-item">
         <a class="nav-link"  (click)="logout()" *ngIf="loggedIn()">Logout</a>
