--- a/src/app/components/opportunities/opportunities.component.html
+++ b/src/app/components/opportunities/opportunities.component.html
@@ -8,7 +8,6 @@
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!-- Position Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> ID. </th>
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -19,7 +18,6 @@
       <td mat-cell *matCellDef="let element"> {{element.ed}} </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="skills">
       <th mat-header-cell *matHeaderCellDef> Skills </th>
       <td mat-cell *matCellDef="let element"> {{element.skills}} </td>
@@ -30,19 +28,17 @@
       <td mat-cell *matCellDef="let element"> {{element.date}} </td>
     </ng-container>
     
-    <!-- Weight Column -->
     <ng-container matColumnDef="location">
       <th mat-header-cell *matHeaderCellDef> Location </th>
       <td mat-cell *matCellDef="let element"> {{element.location}} </td>
     </ng-container>
   
-    <!-- Symbol Column -->
     <ng-container matColumnDef=" ">
       <th mat-header-cell *matHeaderCellDef>  </th>
       <td mat-cell *matCellDef="let element"> 
             <mat-icon (click)="openDialog(element,'edit')" class="icons">edit</mat-icon>  
             <mat-icon (click)="openDialog(element,'delete')" class="icons">delete</mat-icon>  
-            <mat-icon (click)="openDialog(element,'info')" class="icons">info</mat-icon>
+            <mat-icon (click)="openDialog(element,'oppInfo')" class="icons">info</mat-icon>
       </td>
     </ng-container>
    
@@ -51,13 +47,36 @@
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
   
-    <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
       <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
     </tr>
   </table>
 
 </div>
+
+
+
+
+<!--  SAMPLE TESTING -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="modal fade" id="addOpportunityModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -159,7 +178,7 @@
         <form [formGroup]="opportunityForm" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="fill">
           <mat-label>ED</mat-label>
-          <input matInput type="text" formControlName="ed" required ngModel={{editOpportunity?.ed}} (keyup)="check()">
+          <input matInput type="text" formControlName="ed" required ngModel={{editOpportunity?.ed}} >
           <mat-error 
           *ngIf="opportunityForm.controls['ed'].invalid && (opportunityForm.controls['ed'].dirty || opportunityForm.controls['ed'].touched)">
           ED Name is required
@@ -198,13 +217,15 @@
           </mat-error>
         </mat-form-field>
         </form>
-      </div>
+
+       
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary" [disabled]="!opportunityForm.valid" (click)="onEdit(editOpportunity)" data-dismiss="modal">Save changes</button>
       </div>
     </div>
   </div>
+</div>
 </div>
 
 
@@ -218,7 +239,6 @@
         </button>
       </div>
       <div class="modal-body">
-
         <h4>ED:     {{infoOpportunity?.ed}}</h4>
         <p>Location:  {{infoOpportunity?.location}}</p>
           <p>
@@ -229,6 +249,16 @@
             SKills: 
             {{infoOpportunity?.skills}}
           </p>
+          <!-- <h3 *ngIf="logSize>1">Modificatoin history</h3>
+          <ul>
+            <li *ngFor="let log of logData">
+                <p *ngIf="log.action != 'Added new Opportunity'">
+                  {{log.name}} <span> on {{log.dateTime}}</span>
+                </p>
+                  
+            </li>
+          </ul> -->
+          <a (click)="findLogs()" href="/audits">Modification history</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -237,3 +267,5 @@
   </div>
 </div>
 
+
+ 
