--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login">
 <mat-card>
   <mat-card-content>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <!-- <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <h2>Log In</h2>
       <mat-error *ngIf="loginInvalid">
         The username and password were not recognized
@@ -20,7 +20,7 @@
       </mat-form-field>
 
       <button mat-raised-button color="primary">Login</button>
-    </form>
+    </form> -->
     <button mat-button color="primary" (click)="signInWithGoogle()">
       Sign in with google
     </button>
