--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,9 +8,9 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/opportunities" *ngIf="loggedIn()">Opportunities</a>
       </li>
-      <!-- <li class="nav-item ">
+      <li class="nav-item ">
         <a class="nav-link" routerLink="/search-opportunities" *ngIf="loggedIn()">Search</a>
-      </li> -->
+      </li>
       
       <li class="nav-item">
         <a class="nav-link" routerLink="/trends" >Trends</a>
