--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,6 +22,9 @@
       <button mat-raised-button color="primary">Login</button>
     </form> -->
     <button mat-button color="primary" (click)="signInWithGoogle()">
+      <span>
+        <img src="../../../assets/google.jpg" alt="gmailIcon" id="loginicon">
+      </span>
       Sign in with google
     </button>
   </mat-card-content>
