--- a/src/app/components/trends/trends.component.html
+++ b/src/app/components/trends/trends.component.html
@@ -1,9 +1,8 @@
 <div class="container">
     <mat-toolbar-row>
-        <button mat-button (click)="changeTrend('skills')">Skills</button>
-        <button mat-button (click)="changeTrend('Location')">Location</button>
-        <button mat-button (click)="changeTrend('ed')">ED</button>
-        <button mat-button (click)="changeTrend('date')">Date</button>
+        <button mat-button (click)="changeTrend('skills')" id="Skills">Skills</button>
+        <button mat-button (click)="changeTrend('Location')" id="Location">Location</button>
+        <button mat-button (click)="changeTrend('ed')" id="Ed">ED</button>
     </mat-toolbar-row>
 
     <table>
